# ros2_control_dynamic_controller

src/dynamic_controller_plugin/: CMakeLists.txt  package.xml  plugins.xml
src/dynamic_controller_plugin/include/dynamic_controller_plugin/: computed_torque_controller.hpp  visibility_control.h
src/dynamic_controller_plugin/src/: computed_torque_controller.cpp
src/kinematics_kdl/: CMakeLists.txt  package.xml
src/kinematics_kdl/src/: main.cpp
src/manipulator_description_pkg/: package.xml  setup.cfg  setup.py
src/manipulator_description_pkg/config/: manipulator_description.rviz
src/manipulator_description_pkg/controllers/: controllers.yaml  controllers_v1.yaml
src/manipulator_description_pkg/meshes/: Link_5.stl  Link_7.stl
src/manipulator_description_pkg/urdf/: manipulator_description.urdf  manipulator_description_gazebo.urdf  manipulator_description_gazebo_v1.urdf  manipulator_description_v1.urdf
src/manipulator_gazebo_pkg/: package.xml  setup.cfg  setup.py
src/manipulator_launch_pkg/: package.xml  setup.cfg  setup.py
src/manipulator_launch_pkg/launch/: manipulator_launch.launch.py  manipulator_launch_v1.launch.py
src/manipulator_move_pkg/: package.xml  setup.cfg  setup.py
src/manipulator_move_pkg/launch/: manipulator_move_launch.launch.xml  manipulator_move_launch_v1.launch.xml
src/manipulator_move_pkg/manipulator_move_pkg/: desired_position.py  trajectory_interpolation.py
